log
Mon 17 Apr 2023 07:10:36 PM UTC: 
 tests:  1|8
total_score: 0/70
d528389
Mon 17 Apr 2023 07:33:50 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:13: error: unused variable ‘nuevoNodo’ [-Werror=unused-variable]
   42 |   TreeNode* nuevoNodo = createTreeNode(lower_than,NULL);
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
1a71094
Mon 17 Apr 2023 07:35:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:16: error: implicit declaration of function ‘createTreeNdoe’; did you mean ‘createTreeNode’? [-Werror=implicit-function-declaration]
   42 |   tree->root = createTreeNdoe(lower_than,NULL);
      |                ^~~~~~~~~~~~~~
      |                createTreeNode
treemap.c:42:14: error: assignment to ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
   42 |   tree->root = createTreeNdoe(lower_than,NULL);
      |              ^
cc1: all warnings being treated as errors
Compilation failed
b1cae7d
